--- a/04-monitoring/app/docker-compose.yaml
+++ b/04-monitoring/app/docker-compose.yaml
@@ -12,6 +12,10 @@ services:
       - "9300:9300"
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
+    deploy:
+      resources:
+        limits:
+          memory: 4G
 
   ollama:
     image: ollama/ollama
