--- a/05-orchestration/mageai/docker-compose.yml
+++ b/05-orchestration/mageai/docker-compose.yml
@@ -45,6 +45,10 @@ services:
     restart: always
     networks:
       - app-network
+    deploy:
+      resources:
+        limits:
+          memory: 4G
 
 networks:
   app-network:
